# tiny-cut

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README-ZH.md  README.md  index.html  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
docs/: design.md  ffmpeg-license.md  index.html  main.js  style.css
i18n/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  pt-BR.json  ru.json  zh-Hant.json  zh.json
scripts/: release.js  setup.js  validate-i18n.js
src/: app.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  ffmpeg.rs  main.rs  video_server.rs
src/components/: export-modal.tsx  export-progress-modal.tsx  info-modal.tsx  modal.tsx  timeline.tsx  video-player.tsx
src/lib/: i18n.ts  path.ts  tauri.ts  time.ts
src/types/: trim.ts
