[package]
name = "tiny-cut"
version = "0.1.0"
description = "A lightweight, open-source, cross-platform video trimming application"
authors = ["you"]
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
tokio = { version = "1", features = ["net", "fs", "io-util"] }
async-stream = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSArray", "NSObject", "NSString", "NSUserDefaults"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
